--- a/strategy/js/index.html
+++ b/strategy/js/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <select id="slcOptions">
+        <option value="0">Lista</option>
+        <option value="1">Lista con detalle</option>
+      </select>
+
+      <div id="content"></div>
+    </div>
     <script src="strategy.js"></script>
-</head>
-<body>
-    
-</body>
+  </body>
 </html>
