--- a/strategy/js/index.html
+++ b/strategy/js/index.html
@@ -10,6 +10,8 @@
       <select id="slcOptions">
         <option value="0">Lista</option>
         <option value="1">Lista con detalle</option>
+        <option value="2">Lista con imagen</option>
+
       </select>
 
       <div id="content"></div>
